<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        tools:ignore="RelativeOverlap">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:id="@+id/Volunteer_name"
            android:textSize="26sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone_number"
            android:id="@+id/Volunteer_phone"
            android:textSize="26sp"
            />
    </LinearLayout>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_name"
        android:id="@+id/callButton"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/call_button" />
</RelativeLayout>