<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginInActivity"
    android:background="@drawable/settings_screen"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ic_arrow_back_black_24dp"
       android:contentDescription="@string/backbutton"
       android:id="@+id/login_back_button"
       android:layout_marginTop="15dp"
       android:layout_marginStart="25dp"
       app:backgroundTint="#ffffff"
       />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:src="@drawable/login_logo"
                android:contentDescription="@string/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginTop="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_email"
                    android:inputType="textPersonName"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/Login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user_sign_up"
                android:layout_below="@id/Login_btn"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/signUpLink" />
        </RelativeLayout>

</ScrollView>




</LinearLayout>