<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/register_btn"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:textAllCaps="false"
           android:textSize="15sp"
           android:layout_gravity="center_horizontal"
           android:padding="16dp"
           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
           />
       <com.google.android.material.button.MaterialButton
           android:id="@+id/signUp_btn"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/signUp"
           android:textAllCaps="false"
           android:layout_gravity="center_horizontal"
           android:textSize="15sp"
           android:layout_marginTop="10dp"
           android:padding="16dp"
           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
           />



</LinearLayout>