<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/settings_screen"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:paddingTop="10dp"
            android:textColor="#000000"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/settingsBack"
            />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.example.onload_project_x.settingsFragment"
            android:layout_marginTop="15dp"
            android:id="@+id/settingsFragment"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="75dp"
            android:id="@+id/complaintTV"
            android:text="@string/register_your_complaint"
            android:textColor="#000"
            tools:ignore="RtlSymmetry"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/callEmergencyContact"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="75dp"
            android:text="@string/call_emergency_contact"
            android:textColor="#000000"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signOut"
            android:text="@string/sign_out"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="75dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:textColor="#00000f"
            tools:ignore="RtlSymmetry"
            android:focusable="true" />
    </LinearLayout>


</LinearLayout>