<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_screen"
    android:orientation="vertical"
    tools:context=".complaintRegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="25dp"
        android:text="@string/complaint_registration"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-medium"
        android:textSize="30sp"
        tools:ignore="RtlSymmetry" />

    <androidx.cardview.widget.CardView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/name_ET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:hint="@string/name_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            tools:ignore="TextFields" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/PhoneNumberCV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/phone_ET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            tools:ignore="TextFields" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/complaintTypeCV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <Spinner
            android:id="@+id/complaintType"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:spinnerMode="dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/descriptionCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/description_ET"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="start|top"
            android:hint="@string/describe_the_crime"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            tools:ignore="TextFields" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/address_ET"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="start|top"
            android:hint="@string/enter_your_address"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress|textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            tools:ignore="TextFields" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/submitCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center_horizontal"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/submitTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:gravity="start|top"
            android:hint="@string/Submit"
            android:textSize="15sp"
            tools:ignore="TextFields" />
    </androidx.cardview.widget.CardView>

</LinearLayout>